[package]
name = "icub3d_sudoku_solver"
description = "A sudoku solver."
license = "MIT"
license-file = "LICENSE"
version = "0.1.1"
authors = ["Joshua Marsh (icub3d) <joshua@themarshians.com>"]
edition = "2018"
repository = "https://githib.com/icub3d/sudoku_solver.rs"
keywords = ["sudoku", "solver", "games"]
categories = ["algorithms", "games"]
readme = "README.md"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.6"
regex = "1.3.4"
